--- a/ParkAPI/appsettings.json
+++ b/ParkAPI/appsettings.json
@@ -4,5 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;database=parkAPI;uid=root;pwd=epicosus;"
 }
