--- a/ParkAPI/appsettings.json
+++ b/ParkAPI/appsettings.json
@@ -6,5 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;database=parkAPI;uid=root;pwd=epicosus;"
+    "DefaultConnection": "Server=localhost;Port=3306;database=parkApi;uid=root;pwd=epicosus;"
+  }
 }
